# s3_backup_service

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  config-example.json  docker-compose.yml  entrypoint.sh  generate_key.py  main.py  pyproject.toml  readme.txt
alembic/: env.py
alembic/versions/: 2024_08_24_2203-5931692aa6b2_initial_migration.py  2024_09_04_2211-cb669ef183ff_initial.py
api/: __init__.py  app.py  endpoints.py  exceptions.py  websocket.py
common/: BackupConfig.py  schemas.py  settings.py
db/: engine.py  models.py
repositories/: backup_files.py  buckets.py  s3_storages.py
services/: Encryption.py  S3Client.py  backup.py  backup_files.py  backup_files_orm.py  bucket_orm.py  get_item_info.py  s3_storages.py  s3_storages_orm.py  utils.py  verify_api_key.py
tests/: conftest.py  test-config.json  test_backup_api.py  test_backup_config.py
tests/test_repository/: test_backup_files.py
tests/test_services/: test_backup.py  test_db.py  test_encryption.py  test_get_item_info.py
