[tool.poetry]
name = "s3-backup-service"
version = "0.1.0"
description = ""
authors = ["Сергей Сушков <sushkov_sv@ursip.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
aiobotocore = "^2.13.3"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
alembic = "^1.13.2"
cryptography = "^43.0.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
setuptools = "^73.0.1"
faker = "^28.0.0"
uvicorn = "^0.30.6"
httpx = "^0.27.0"
websockets = "^13.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"